Ensure image doesn't spill over container.

--- a/src/notebook/styles/main.css
+++ b/src/notebook/styles/main.css
@@ -282,3 +282,8 @@ td {
     padding: 0.5em 1em;
     border: 1px solid #cbcbcb;
 }
+
+img {
+  display:block;
+  max-width: 100%;
+}
